@@ -1,8 +1,8 @@
 Package: qgraph
 Type: Package
-Title: Network-based data visualization
+Title: Graph Plotting Methods, Psychometric Data Visualization and Graphical Model Estimation
 Version: 1.3.1
-Date: 2014-12-17
+Date: 2015-03-10
 Author: Sacha Epskamp, Giulio Costantini, Angelique O. J. Cramer, Lourens J. Waldorp, Verena D. Schmittmann and Denny Borsboom
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 3.0.0)
