@@ -8,7 +8,7 @@ Computes an average layout over several graphs
 This function can be used to compute a joint layout over several graphs.
 }
 \usage{
-averageLayout(..., layout = "spring", layout.par = list())
+averageLayout(..., layout = "spring", repulsion = 1, layout.par)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -18,6 +18,9 @@ Multiple graph objects such as \code{qgraph} objects or weights matrices.
   \item{layout}{
 Same as in \code{\link{qgraph}}
 }
+  \item{repulsion}{
+    The repulsion parameter as used in  \code{\link{qgraph}}.
+  }
   \item{layout.par}{
 Same as in \code{\link{qgraph}}
 }
